<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutExercise">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="224dp"
        android:layout_height="58dp"
        android:layout_marginEnd="237dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/insta" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView5"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#EF3C3C"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView1"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#EF3CD7"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView2"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#2F8A1F"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name3" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView3"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#2FBFAF"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView4"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#FFDF0E"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView6"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#1E5CD6"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView7"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#2D5E02"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView8"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#F7520360"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name8" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView9"
                    android:layout_width="89dp"
                    android:layout_height="82dp"
                    android:background="#83397F"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name1" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView11"
                        android:layout_width="143dp"
                        android:layout_height="115dp"
                        app:shapeAppearanceOverlay="@style/circular"
                        app:srcCompat="@drawable/nft4" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="260dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/postTextName1"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="294dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/nft6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnLike" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnShare" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/textComment" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView11"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        app:shapeAppearanceOverlay="@style/circular"
                        app:srcCompat="@drawable/nft6" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="260dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/postTextName2"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="294dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/nft1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnLike" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnShare" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/textComment" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView14"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:shapeAppearanceOverlay="@style/circular"
                        app:srcCompat="@drawable/nft8" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="260dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/postTextName3"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="294dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/nft2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnLike" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnShare" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/textComment" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>